--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,6 +3,5 @@
  * Все паршалы подключаются сюда.
  */
 
-// Стили для файла с примером HTML-фрагмента
-// @import './example';
-@import './styles.scss';
+/* Стили для файла с примером HTML-фрагмента */
+@import './example';
